# Flask_Geolocation

./: Filter Out PostcodeCityState.ipynb  ShopAddresses.csv  ShopAddressesLongLat.csv  function.js  google api address to lan & long.ipynb  index.html  try.html
flaskapp/: main.py  service.py
flaskapp/data/: ShopPostcode.csv  method testing.ipynb
flaskapp/static/: style.css
flaskapp/templates/: form.html  index.html
nearestdealer - Master/: Cargo.toml  ShopAddressesLongLat.csv
nearestdealer - Master/src/: main.rs
