[package]
name = "nearestdealer"
version = "0.1.0"
authors = ["Jonathan Kee <48512757+jonathan-kee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking","json"] }
tokio = { version = "0.2", features = ["full"] }
csv = "1.1.3"
serde = {version="1.0.114", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0.57"